@@ -1,3 +1,13 @@
+0:1:0       2013 Unpublished.
+	swipl-win.exe doesnot listen to the std I/O streams. So <-print/1 doesnot display
+	on console. Added message that only succeeds when Prolog was started with
+	swipl-win.exe and only once.
+
+0:1:0       2012 December 26   [oliebollen]
+   First release with updated syntax, documentation and Windows binaries.
+	Reflects state of affairs for the PADL 2013 related publication.
+   Great work by Vitor on passing c() via C and on 
+
 0:0:5       2012 September 12
    ?fixed?  * in array indicators (tut5) broken (why ?).
    Moved real_ex.pl to examples/for_real.pl
